--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ethers": "^6.7.0"
+    "bip39": "^3.0.4",
+    "bip32": "^2.0.6",
+    "bs58": "^5.0.0",
+    "ed25519-hd-key": "^1.1.3",
+    "tweetnacl": "^1.0.3",
+    "tronweb": "^5.3.0",
+    "@solana/web3.js": "^1.94.0"
   }
 }
