--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "bip39": "^3.0.4",
-  "bip32": "^2.0.6",
-  "bs58": "^5.0.0",
-  "ed25519-hd-key": "^1.1.3",
-  "tweetnacl": "^1.0.3",
-  "tronweb": "^5.3.0",
-  "@solana/web3.js": "^1.94.0"
+{
+  "name": "xpub-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "ethers": "^6.7.0"
+  }
 }
