--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "xpub-api",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ethers": "^6.7.0"
+    "ethers": "^6.8.1"
   }
 }
