--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "xpub-api",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "bip39": "^3.0.4",
+    "bip32": "^6.1.0",
+    "cors": "^2.8.5",
     "ethers": "^6.8.1"
   }
 }
