--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "ethers": "^6.8.1",
     "bip39": "^3.0.4",
     "bip32": "^6.1.0",
-    "cors": "^2.8.5",
-    "ethers": "^6.8.1"
+    "bitcoinjs-lib": "^6.1.0",
+    "tronweb": "^5.2.0",
+    "@solana/web3.js": "^1.88.2"
   }
 }
