--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ethers": "^6.8.1",
     "bitcoinjs-lib": "^6.1.0",
     "tronweb": "^5.2.0",
-    "@solana/web3.js": "^1.88.2"
+    "@solana/web3.js": "^1.88.2",
+    "xrpl": "^3.5.0",
+    "@ton/crypto": "^0.0.7"
   }
 }
