--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xpub-api",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
@@ -10,12 +10,12 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bip39": "^3.0.4",
-    "bip32": "2.0.6",               
+    "bip32": "^2.0.6",
     "ethers": "^6.8.1",
     "bitcoinjs-lib": "^6.1.0",
     "tronweb": "^5.2.0",
     "@solana/web3.js": "^1.88.2",
     "xrpl": "^3.5.0",
-    "@ton/crypto": "^0.0.7"
+    "tonweb": "^0.0.109"
   }
 }
