--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xpub-api",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -14,6 +14,7 @@
     "ethers": "^6.8.1",
     "bitcoinjs-lib": "^6.1.0",
     "tronweb": "^5.2.0",
-    "@solana/web3.js": "^1.88.2"
+    "@solana/web3.js": "^1.88.2",
+    "xrpl": "^3.5.0"
   }
 }
