--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "bitcoinjs-lib": "^6.1.0",
     "tronweb": "^5.2.0",
     "@solana/web3.js": "^1.88.2",
-    "xrpl": "^2.6.0",
-    "@ton/crypto": "^0.0.7",
-    "ton-crypto": "^1.2.5"
+    "xrpl": "^2.6.0"
   }
 }
