--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xpub-api",
+  "name": "multi-wallet-api",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -7,14 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@solana/web3.js": "^1.95.2",
+    "bip32": "^6.0.1",
     "bip39": "^3.0.4",
-    "bip32": "^2.0.6",
-    "ethers": "^6.8.1",
     "bitcoinjs-lib": "^6.1.0",
+    "cors": "^2.8.5",
+    "ethers": "^6.10.0",
+    "express": "^4.19.2",
     "tronweb": "^5.2.0",
-    "@solana/web3.js": "^1.88.2",
-    "xrpl": "^2.6.0"
+    "xrpl": "^2.11.1"
   }
 }
